k8s/base/merino-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merino-deployment
  labels:
    app: merino
spec:
  replicas: 1
  selector:
    matchLabels:
      app: merino
  template:
    metadata:
      labels:
        app: merino
    spec:
      containers:
        - name: merino
          image: merino:local
          ports:
            - containerPort: 8000
          command:
            [
              "uvicorn",
              "merino.main:app",
              "--host",
              "0.0.0.0",
              "--port",
              "8000",
            ]
        - name: ohttp-gateway
          image: cloudflare/ohttp:local
          ports:
            - containerPort: 8080
