k8s/base/merino-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: merino-service
spec:
  selector:
    app: merino
  ports:
    - name: merino
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: ohttp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
